tests/hopix/typechecker/bad/memory1.hopix
val r : cell (int) = ref (0)

val write : unit =
  r := "not me!"